Fix tag cloud classes - Add a div to wrap entire cloud - rename classes

--- a/assets/css/3-layouts/_post-archive.sass
+++ b/assets/css/3-layouts/_post-archive.sass
@@ -7,33 +7,34 @@
   height: 100%
   text-align: left
 
-  li
+  .taglist
     list-style-type: none
-
-  .tag-cloud
-    li
-      display: inline-block
-
-  .tag-cloud-item
-    background-color: $light-gray
-    margin-right: 10px
-    border-top-left-radius: 10px
-    border-bottom-left-radius: 10px
-    padding-left: 10px
-    text-transform: uppercase
-
-  a
-    &:visited
-      color: lighten($medium-gray, 20%)
-
-  .tag-count
-    background-color: $white
-    border-top-left-radius: 10px
-    border-bottom-left-radius: 10px
-    padding-left: 10px
 
   .post-list
     margin-top: 15px
 
   .post-title
     text-transform: capitalize
+
+.tag-cloud-list
+  list-style-type: none
+  li
+    display: inline-block
+
+
+.tag-cloud-item
+  background-color: $light-gray
+  margin-right: 10px
+  border-top-left-radius: 10px
+  border-bottom-left-radius: 10px
+  padding-left: 10px
+  text-transform: uppercase
+
+  &:visited
+    color: lighten($medium-gray, 20%)
+
+.tag-count
+  background-color: $white
+  border-top-left-radius: 10px
+  border-bottom-left-radius: 10px
+  padding-left: 8px
